k8s/test/backend-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: backend-config
  namespace: group19-test
data:
  frontend-port: "84"
  jwt-token-expiration: "86400"
