k8s/test/backend-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: backend-secret
  namespace: group19-test
type: Opaque
data:
  mail-service-password: aGJ0b3ZzaHZleWtjaGpncAo=
  website-host: MTMwLjYxLjQ0LjE1MQo=
  cloudinary_api_secret: Y0FSRjVwaE1vd3dOTXFSSXRDQzU3WEQyQnRnCg==
  cloudinary_api_key: MjcxMzUxNzM1NzE3NTM2Cg==
  cloudinary_api_name: ZGdreHVpd2xzCg==
