k8s/test/postgres-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: postgres-config
  namespace: group19-test
data:
  postgres-url: postgres-service-test
