k8s/test/postgres-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: postgres-secret
  namespace: group19-test
type: Opaque
data:
  postgres-user: Z3JvdXAxOQ==
  postgres-db: Z3JvdXAxOQ==
  postgres-password: Z3JvdXAxOQ==
